--- a/MartaBorregueroSoria.html
+++ b/MartaBorregueroSoria.html
@@ -12,9 +12,15 @@
     Ejercicio de Git: tenemos que aprender a usarlo.
 </h1>
 
+<h2>
+    El git se inicia en Git Bash de la carpeta inicial.
+</h2>
+
 <p>
     Este ejercicio es muy interesante.
 </p>
+
+
 </body>
 </html>
 
